# flachware

./: .gitattributes  .gitignore  .pre-commit-config.yaml  DATASHEET.md  LICENSE  README.md  pyproject.toml
data/: artists.csv  artworks.csv
src/flachware/: __init__.py  classify.py  cli.py  crawler.py  downloader.py  export.py  parser.py  validate.py
tests/: conftest.py  test_parser.py
tests/fixtures/: adrian-soelch.html  adrine-ter-arakelyan.html  afshin-karimi-fard.html  index.html
